--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "Deepak Saini",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "ejs": "^3.1.10",
     "emoji-picker-element": "^1.22.8",
     "express": "^4.21.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "node-emoji": "^2.1.3",
