--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Deepak Saini",
   "license": "ISC",
   "dependencies": {
+    "addressit": "^1.8.2",
     "crypto": "^1.0.1",
     "ejs": "^3.1.10",
     "emoji-picker-element": "^1.22.8",
@@ -16,6 +17,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "fs": "^0.0.1-security",
+    "geolib": "^3.3.4",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
